# awesome-codex-theme

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.en.md  README.md  README.zh-CN.md  SECURITY.md  package.json
.github/ISSUE_TEMPLATE/: config.yml  theme-proposal.yml
.github/workflows/: desktop.yml  pages.yml
LICENSES/: CC0-1.0.txt
apps/theme-manager/: package-lock.json  package.json
apps/theme-manager/src-tauri/: Cargo.toml  tauri.conf.json
apps/theme-manager/src-tauri/capabilities/: default.json
apps/theme-manager/src-tauri/icons/: icon.icns
apps/theme-manager/src-tauri/src/: catalog.rs  lib.rs  main.rs  persistence.rs  platform.rs  skin_runtime.rs  updater.rs
context/: README.md
context/raw/: README.md
context/tools/: README.md  city-atlas-studio.html
docs/: CHANGELOG.md  README.md  adapters.md  agent-brief.md  agent-install.md  architecture.md  art-direction.md  city-atlas-art-direction.md  community-platform.md  community-registry.md  desktop-manager.md  fan-art-direction.md  fan-art-policy.md  gallery-design.md  landscape.md  macos-testing.md  native-testing.md  persistent-theme.md  release-signing.md  standard.md
docs/release-notes/: v0.3.0-alpha.3.md  v0.3.0-alpha.4.md  v0.3.1.md  v0.3.2.md
docs/report/: 2026-07-18-theme-community-release.md
installer/windows/: ACT-Installer.ps1  Launch ACT Installer.cmd  README.txt  copy.json
schemas/: registry.schema.json  theme-pack.schema.json
screenshots/codex-beta-26.707.3351.0/: manifest.json
screenshots/codex-beta-26.715.3651.0/: manifest.json
scripts/: build-installer.mjs  build.mjs  capture-full-skin-screenshots.mjs  capture-native-screenshots.mjs  generate-themes.mjs  install-theme.ps1  install-theme.sh  prepare-desktop.mjs  run-image-jobs.mjs  serve.mjs  smoke-theme-manager.mjs  validate.mjs
scripts/lib/: codex-native-theme.mjs  png.mjs  zip.mjs
site/: index.html
site/assets/: app.js  styles.css
tests/: full-skin-runtime.test.mjs  repository.test.mjs
themes/: catalog.json
themes/source-art/: alpine-cabin-code.provenance.json  jobs.json  (+68 more)
(+11 files in other folders)
