[package]
name = "awesome-codex-theme"
version = "0.2.0-alpha.1"
description = "Cross-platform Codex Native theme manager"
authors = ["Awesome Codex Theme contributors"]
edition = "2024"

[lib]
name = "awesome_codex_theme_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
arboard = "3.6.1"
hex = "0.4.3"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls-no-provider"] }
rustls = { version = "0.23.42", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
tauri = { version = "2.11.5", features = ["protocol-asset"] }
tauri-plugin-opener = "2.5.4"
tauri-plugin-updater = "2.10.1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
